# finbot

./: .env.example  CONTRIBUTING.md  DOCS.md  README.md  pyproject.toml
.data/: finance_agent.db-shm  finance_agent.db-wal
app/: agent.py  config.py  main.py
